--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,24 @@ name: CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - '**.go'
+      - go.mod
+      - go.sum
   pull_request:
     branches: [ main ]
+    paths:
+      - '**.go'
+      - go.mod
+      - go.sum
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
+      - uses: actions/checkout@v5
+      - uses: actions/setup-go@v6
         with:
           go-version-file: go.mod
           check-latest: true
@@ -44,8 +52,8 @@ jobs:
       E2E_UDS_ENABLE: "1"
       E2E_UDS_UDP_ENABLE: "1"
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
+      - uses: actions/checkout@v5
+      - uses: actions/setup-go@v6
         with:
           go-version-file: go.mod
           check-latest: true
