--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,18 @@
 name: CI
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - '**.go'
-      - go.mod
-      - go.sum
-  pull_request:
-    branches: [ main ]
-    paths:
-      - '**.go'
-      - go.mod
-      - go.sum
+  # push:
+  #   branches: [ main ]
+  #   paths:
+  #     - '**.go'
+  #     - go.mod
+  #     - go.sum
+  # pull_request:
+  #   branches: [ main ]
+  #   paths:
+  #     - '**.go'
+  #     - go.mod
+  #     - go.sum
   workflow_dispatch:
 
 jobs:
